[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game_objects/door_animation/Door27.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/up_arrow.png" type="Texture" id=2]
[ext_resource path="res://scenes_two/EntryDoor.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 185 )

[node name="EntryDoor" type="Area2D"]
script = ExtResource( 3 )

[node name="Door" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="UpArrow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -160 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="ArrowTimer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_EntryDoor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EntryDoor_body_exited"]
[connection signal="timeout" from="ArrowTimer" to="." method="_on_ArrowTimer_timeout"]
